# ssh-manager

./: README.md  TUI_DESIGN_GUIDELINES.md  install.sh  lcov.info
.github/workflows/: ci.yml
sshm/: Cargo.toml  coverage.sh  lcov.info
sshm/src/: app.rs  config.rs  lib.rs  main.rs  runtime.rs  ssh.rs  update.rs
sshm/tests/: README.md  integration_test.rs  main_tests.rs
sshm/tests/snapshots/: integration_test__add_connection_popup.snap  integration_test__connection_with_custom_port.snap  integration_test__different_terminal_sizes.snap  integration_test__edit_connection_popup.snap  integration_test__empty_connections_message.snap  integration_test__folder_grouping_display.snap  integration_test__help_mode_shows_help_popup.snap  integration_test__input_field_navigation.snap  integration_test__main_screen_layout.snap  integration_test__message_popup.snap  integration_test__no_matches_shows_message.snap  integration_test__search_filters_connections.snap  integration_test__search_mode_shows_search_bar.snap  integration_test__selected_item_highlighted.snap
