[package]
name = "sshm"
version = "0.1.7"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
fuzzy-matcher = "0.3"
uuid = { version = "1.0", features = ["v4"] }
self-github-update-enhanced = { version = "0.39", features = ["archive-tar", "archive-zip", "reqwest"] }





[dev-dependencies]
tempfile = "3.8"
insta = "1.34"
