[package]
name = "sshm"
version = "0.1.8"
edition = "2021"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
fuzzy-matcher = "0.3"
uuid = { version = "1.0", features = ["v4"] }
self-github-update-enhanced = { version = "0.39", features = ["archive-tar", "archive-zip"] }
tar = "0.4"
flate2 = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }





[dev-dependencies]
tempfile = "3.8"
insta = "1.34"
serial_test = "3.4.0"
